--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
+      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div id="user-data">
           <div class="form-group">
             <label for="username">Username</label>
@@ -9,7 +9,7 @@
               type="text" 
               id="username" 
               class="form-control"
-              ngModule
+              ngModel
               name="username">
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
@@ -19,7 +19,7 @@
               type="email" 
               id="email" 
               class="form-control"
-              ngModule
+              ngModel
               name="email">
           </div>
         </div>
