--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,17 @@
             [(ngModel)]="answer"></textarea>
         </div>
         <p>Your answer: {{ answer }}</p>
+        <div class="radio" *ngFor="let g of genders">
+          <label>
+            <input 
+              type="radio"
+              name="gender"
+              ngModel
+              [value]="g"
+              required>
+              {{ g }}
+          </label>
+        </div>
         <button 
         class="btn btn-primary" 
         type="submit"
